make overlay-extra-ui opt-in instead of default

--- a/cas-support-idcard/build.gradle
+++ b/cas-support-idcard/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
 	compile project(':cas-support-esteid')
-	compile project(':cas-overlay-extra-ui')
+	compile project(':cas-support-extra-ui')
 	compile "org.apereo.cas:cas-server-core-webflow:${project.'cas.version'}"
    	compile ('ee.sk.digidoc:jdigidoc:3.12.1') {
 		exclude group: 'iaik.pkcs'
